Fix serialization of FlexLocationGroup and GroupOfStations